// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser print statements parses print lists with no separator 1`] = `
Array [
  Print {
    "expressions": Array [
      Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "type": "Literal",
        "value": BrsString {
          "kind": 3,
          "value": "Foo",
        },
      },
      Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "type": "Literal",
        "value": BrsString {
          "kind": 3,
          "value": "bar",
        },
      },
      Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "type": "Literal",
        "value": BrsString {
          "kind": 3,
          "value": "baz",
        },
      },
    ],
    "tokens": Object {
      "print": Object {
        "isReserved": false,
        "kind": "Print",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
    },
    "type": "Print",
  },
]
`;

exports[`parser print statements parses print lists with separators 1`] = `
Array [
  Print {
    "expressions": Array [
      Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "type": "Literal",
        "value": BrsString {
          "kind": 3,
          "value": "Foo",
        },
      },
      Object {
        "isReserved": false,
        "kind": "Semicolon",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
      Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "type": "Literal",
        "value": BrsString {
          "kind": 3,
          "value": "bar",
        },
      },
      Object {
        "isReserved": false,
        "kind": "Semicolon",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
      Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "type": "Literal",
        "value": BrsString {
          "kind": 3,
          "value": "baz",
        },
      },
    ],
    "tokens": Object {
      "print": Object {
        "isReserved": false,
        "kind": "Print",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
    },
    "type": "Print",
  },
]
`;

exports[`parser print statements parses singular print statements 1`] = `
Array [
  Print {
    "expressions": Array [
      Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "type": "Literal",
        "value": undefined,
      },
    ],
    "tokens": Object {
      "print": Object {
        "isReserved": false,
        "kind": "Print",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
    },
    "type": "Print",
  },
]
`;

exports[`parser print statements supports empty print 1`] = `
Array [
  Print {
    "expressions": Array [
      Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "type": "Literal",
        "value": BrsString {
          "kind": 3,
          "value": "",
        },
      },
    ],
    "tokens": Object {
      "print": Object {
        "isReserved": false,
        "kind": "Print",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
    },
    "type": "Print",
  },
]
`;
